--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,14 @@
 # SITE CONFIGURATION
-title: Sleek # your site title
-author: GitHub User # You :P
-description: > # Meta description of Homepage
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: Koneta柯尼特官方网站 # 网站标题
+author: Anky Lau # You :P
+description: > # 网站介绍
+  汽车周边服务，汽车生活方式品牌。
 baseurl: "/sleek" # the subpath of your site, e.g. /blog
 url: "https://ankylau.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # SEO PLUGIN
 social:
-  name: Your Name
+  name: Koneta
   links:
     - https://twitter.com/BenBalter
     - https://www.facebook.com/ben.balter
@@ -21,16 +19,16 @@ social:
 
 # THEME SETTINGS
 navigation: # Navigation links
-  - {name: 'Home', link: '/'}
-  - {name: 'About', link: '/about'}
-  - {name: 'Contact', link: '/contact'}
+  - {name: '首页', link: '/'}
+  - {name: '关于', link: '/about'}
+  - {name: '联系我们', link: '/contact'}
 
 tagline: >
   Modern Jekyll theme focused on speed performance &amp; SEO best practices
 
 hero_img: posts/sleek_lg.jpg # Main background image: use the path from /assets/img/ => This will output /assets/img/posts/sleek_lg.jpg
 
-email: your-email@domain.com # email for form submission
+email: info@ankylau.com # email for form submission
 
 twitter_username: jan_czizikow # replace with your_twitter_username or comment to remove link from footer
 github_username:  janczizikow # replace with your_github_username or comment to remove link from footer
