--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # SITE CONFIGURATION
-title: Koneta®柯尼特官网 # 网站标题
+title: 柯尼特官网 # 网站标题
 author: Anky Lau # You :P
 description: > # 网站介绍
   汽车周边服务，汽车生活方式品牌。
