--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 柯尼特官网 # 网站标题
 author: Anky Lau # You :P
 description: > # 网站介绍
   汽车周边服务，汽车生活方式品牌。
-baseurl: "/sleek" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # SEO PLUGIN
