--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ navigation: # Navigation links
 
 headtitle: 柯尼特品牌官方
 tagline: >
-  Koneta®柯尼特是一个汽车周边服务，汽车生活方式品牌。
+  Koneta®柯尼特是一个汽车周边服务，汽车生活方式品牌。<br/>
   提供全类高档汽车内外饰用品销售，汽车外饰服务。
 hero_img: posts/sleek_lg.jpg # Main background image: use the path from /assets/img/ => This will output /assets/img/posts/sleek_lg.jpg
 
