--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,11 @@ navigation: # Navigation links
   - {name: '关于', link: '/about'}
   - {name: '联系我们', link: '/contact'}
 
-headtitle: 柯尼特品牌官方
+headtitle: 汽车生活方式品牌
 tagline: >
-  Koneta®柯尼特是一个汽车周边服务，汽车生活方式品牌。<br/>
-  提供全类高档汽车内外饰用品销售，汽车外饰服务。
+  Koneta®柯尼特是一个以汽车周边高质量服务。<br/>
+  保持车辆处于最佳状态比想象的要容易！无论您是需要保持可靠的发动机性能，还是想在人迹罕至的地方享受更好的处理，等等，我们都能满足您的要求。  
+  顺便说一句，我们期待与您见面！
 hero_img: posts/sleek_lg.jpg # Main background image: use the path from /assets/img/ => This will output /assets/img/posts/sleek_lg.jpg
 
 email: info@ankylau.com # email for form submission
