--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ navigation: # Navigation links
 
 headtitle: 汽车生活方式品牌
 tagline: >
-  Koneta®柯尼特是一个以汽车周边高质量服务。<br/>
-  保持车辆处于最佳状态比想象的要容易！无论您是需要保持可靠的发动机性能，还是想在人迹罕至的地方享受更好的处理，等等，我们都能满足您的要求。<br/>
+  Koneta®柯尼特是一个汽车周边服务以及汽车用品品牌。<br/>
+  保持车辆处于最佳状态比想象的要容易！无论您是需要保持干净美观的外表，还是想在人迹罕至的地方享受更好的便利，等等，我们都能满足您的要求。<br/>
   顺便说一句，我们期待与您见面！
 hero_img: posts/sleek_lg.jpg # Main background image: use the path from /assets/img/ => This will output /assets/img/posts/sleek_lg.jpg
 
@@ -34,8 +34,7 @@ email: info@ankylau.com # email for form submission
 
 #twitter_username:  # replace with your_twitter_username or comment to remove link from footer
 #github_username:   # replace with your_github_username or comment to remove link from footer
-instagram_username: ankylau # replace with your_instagram_username or comment to remove link from footer
-weibo_username: liuhuei
+#instagram_username: ankylau # replace with your_instagram_username or comment to remove link from footer
 
 disqus:
   shortname: janczizikow # to enable comments replace with your_disqus_shortname
