--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ social:
 # THEME SETTINGS
 navigation: # Navigation links
   - {name: '首页', link: '/'}
+  - {name: '资讯', link: '/post'}
   - {name: '关于', link: '/about'}
   - {name: '联系我们', link: '/contact'}
 
