--- a/_config.yml
+++ b/_config.yml
@@ -24,11 +24,9 @@ navigation: # Navigation links
   - {name: '关于', link: '/about'}
   - {name: '联系我们', link: '/contact'}
 
-headtitle: 汽车生活方式品牌
+headtitle: Koneta®
 tagline: >
-  Koneta®柯尼特是一个汽车周边服务以及汽车用品品牌。<br/>
-  保持车辆处于最佳状态比想象的要容易！无论您是需要保持干净美观的外表，还是想在人迹罕至的地方享受更好的便利，等等，我们都能满足您的要求。<br/>
-  顺便说一句，我们期待与您见面！
+  柯尼特(Koneta®)一个汽车周边服务品牌。
 hero_img: posts/sleek_lg.jpg # Main background image: use the path from /assets/img/ => This will output /assets/img/posts/sleek_lg.jpg
 
 email: info@ankylau.com # email for form submission
