--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ hero_img: posts/sleek_lg.jpg # Main background image: use the path from /assets/
 email: info@ankylau.com # email for form submission
 
 #twitter_username:  # replace with your_twitter_username or comment to remove link from footer
-#github_username:   # replace with your_github_username or comment to remove link from footer
+weibo_url: https://weibo.com/ianncn  # replace with your_github_username or comment to remove link from footer
 #instagram_username: ankylau # replace with your_instagram_username or comment to remove link from footer
 
 disqus:
