--- a/_config.yml
+++ b/_config.yml
@@ -10,12 +10,7 @@ url: "https://koneta.cn" # the base hostname & protocol for your site, e.g. http
 social:
   name: Koneta
   links:
-    - https://twitter.com/BenBalter
-    - https://www.facebook.com/ben.balter
-    - https://www.linkedin.com/in/BenBalter
-    - https://plus.google.com/+BenBalter
-    - https://github.com/benbalter
-    - https://keybase.io/benbalter
+    - https://koneta.cn
 
 # THEME SETTINGS
 navigation: # Navigation links
@@ -32,7 +27,7 @@ hero_img: posts/sleek_lg.jpg # Main background image: use the path from /assets/
 email: info@ankylau.com # email for form submission
 
 #twitter_username:  # replace with your_twitter_username or comment to remove link from footer
-weibo_url: https://weibo.com/ianncn  # replace with your_github_username or comment to remove link from footer
+#weibo_url: https://weibo.com/ianncn  # replace with your_github_username or comment to remove link from footer
 #instagram_username: ankylau # replace with your_instagram_username or comment to remove link from footer
 
 disqus:
